# custom-py-docx

./: .gitignore  README.md  create_docx.py  requirements.txt  setup.cfg
.github/workflows/: publish.yml
src/custom-py-docx/: app.py
