[metadata]
name = custom-py-docx
description = Abstra
long_description_content_type = text/markdown
url = https://github.com/cristianovisk/custom-py-docx
project_urls =
    Bug Tracker = https://github.com/cristianovisk/custom-py-docx/issues
    Changelog = https://github.com/cristianovisk/custom-py-docx/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    custom-py-docx = custom-py-docx.app:entry_point